--- a/bcf-checker.vcxproj
+++ b/bcf-checker.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="PercentageRecord.cpp" />
     <ClCompile Include="Validation\BuildChecker.cpp" />
     <ClCompile Include="Misc\CommonDataTypes.cpp" />
     <ClCompile Include="Settings\Configuration.cpp" />
@@ -140,6 +141,7 @@
     <ClCompile Include="Validation\Validator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PercentageRecord.h" />
     <ClInclude Include="Validation\BuildChecker.h" />
     <ClInclude Include="Misc\CommonDataTypes.h" />
     <ClInclude Include="Settings\Configuration.h" />
