--- a/bcf-checker.vcxproj
+++ b/bcf-checker.vcxproj
@@ -129,7 +129,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="PercentageRecord.cpp" />
+    <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Validation\BuildChecker.cpp" />
     <ClCompile Include="Misc\CommonDataTypes.cpp" />
     <ClCompile Include="Settings\Configuration.cpp" />
@@ -141,7 +143,9 @@
     <ClCompile Include="Validation\Validator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Field.h" />
     <ClInclude Include="PercentageRecord.h" />
+    <ClInclude Include="Piece.h" />
     <ClInclude Include="Validation\BuildChecker.h" />
     <ClInclude Include="Misc\CommonDataTypes.h" />
     <ClInclude Include="Settings\Configuration.h" />
