Squashed commit of the following:
unify field/piece representation
removing fieldconverter, now all conversion can be done from the pieces/fields
removing treemerger, no longer needed for bcf finding since it's only relevant when compiling paths in oqb
fixed GetValue()

--- a/bcf-checker.vcxproj
+++ b/bcf-checker.vcxproj
@@ -129,26 +129,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="PercentageRecord.cpp" />
+    <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Validation\BuildChecker.cpp" />
     <ClCompile Include="Misc\CommonDataTypes.cpp" />
     <ClCompile Include="Settings\Configuration.cpp" />
     <ClCompile Include="Conversion\FumenConvert.cpp" />
-    <ClCompile Include="Conversion\FieldCoverter.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SetupPool.cpp" />
-    <ClCompile Include="TreeMerger.cpp" />
     <ClCompile Include="Validation\Validator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Field.h" />
     <ClInclude Include="PercentageRecord.h" />
+    <ClInclude Include="Piece.h" />
     <ClInclude Include="Validation\BuildChecker.h" />
     <ClInclude Include="Misc\CommonDataTypes.h" />
     <ClInclude Include="Settings\Configuration.h" />
     <ClInclude Include="Conversion\FumenConvert.h" />
-    <ClInclude Include="Conversion\FieldConverter.h" />
     <ClInclude Include="SetupPool.h" />
-    <ClInclude Include="TreeMerger.h" />
     <ClInclude Include="Validation\Validator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
