--- a/bcf-checker.vcxproj.filters
+++ b/bcf-checker.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="Conversion\FumenConvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TreeMerger.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -36,13 +33,16 @@
     <ClCompile Include="Settings\Configuration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Conversion\FieldCoverter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Validation\Validator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PercentageRecord.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Field.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Piece.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -51,9 +51,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SetupPool.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="TreeMerger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Validation\BuildChecker.h">
@@ -65,13 +62,16 @@
     <ClInclude Include="Settings\Configuration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Conversion\FieldConverter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Validation\Validator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PercentageRecord.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Field.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Piece.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
