--- a/bcf-checker.vcxproj
+++ b/bcf-checker.vcxproj
@@ -119,7 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -138,7 +138,7 @@
     <ClCompile Include="Conversion\FumenConvert.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SetupPool.cpp" />
-    <ClCompile Include="Validation\Validator.cpp" />
+    <ClCompile Include="Validation\SFinderInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Field.h" />
@@ -149,7 +149,7 @@
     <ClInclude Include="Settings\Configuration.h" />
     <ClInclude Include="Conversion\FumenConvert.h" />
     <ClInclude Include="SetupPool.h" />
-    <ClInclude Include="Validation\Validator.h" />
+    <ClInclude Include="Validation\SFinderInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
